--- a/src/components/FAQ/FAQ.astro
+++ b/src/components/FAQ/FAQ.astro
@@ -26,9 +26,9 @@ import FAQCard from "./FAQCard.astro";
             class="relative w-full space-y-2 overflow-clip bg-dark-bg p-4 text-left text-sm md:w-96 lg:space-y-3 lg:p-6"
           >
             <p class="text-2xl leading-6 lg:text-3xl lg:leading-7">
-              Shopify Toronto<br />
-               620 King St W<br />
-               Toronto, ON M5V 1M6
+              Hall 5<br />
+               ADNEC<br />
+               Abu Dhabi
             </p>
 
             <svg
@@ -54,7 +54,7 @@ import FAQCard from "./FAQCard.astro";
           class="hidden flex-1 space-y-2 overflow-clip bg-dark-bg text-left text-sm shadow-[6px_6px_rgba(0,0,0,0.3)] md:block lg:space-y-3"
         >
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2887.151920821635!2d-79.40337182375544!3d43.645007471102545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b34de686a1441%3A0x6029a0a7505188d3!2s620%20King%20St%20W%2C%20Toronto%2C%20ON%20M5V%201M6!5e0!3m2!1sen!2sca!4v1711710605246!5m2!1sen!2sca"
+            src="https://www.google.com/maps/embed/v1/place?q=ADNEC%20Centre%20Abu%20Dhabi&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"
             width="100%"
             height="100%"
             style="border:0;"
