--- a/src/components/FAQ/FAQ.astro
+++ b/src/components/FAQ/FAQ.astro
@@ -66,26 +66,26 @@ import FAQCard from "./FAQCard.astro";
 
       <div class="grid grid-cols-1 gap-6 lg:grid-cols-[24rem,minmax(24rem,1fr)]">
         <FAQCard question="Eligibility" cardId={"eligibility"}>
-          Anyone 13–18 is welcome! If you're in middle school or a gap year student, check
+          Anyone 12–18 is welcome! If you're in middle school or a gap year student, check
           in with us at <a
             class="underline"
-            href="mailto:apocalypse@hackclub.com"
-            target="_blank">apocalypse@hackclub.com</a
+            href="mailto:team@hackabudhabi.com"
+            target="_blank">team@hackabudhabi.com</a
           >. Don't forget to bring an ID that includes a photo! Read our policy <a
             class="underline"
-            href="https://apocalypse.hackclub.com/id">here</a
+            href="https://hackabudhabi.com/id">here</a
           >.
         </FAQCard>
 
         <FAQCard question="Travel grants" cardId={"travel-grants"}>
           <p class="font-sans text-sm lg:text-base">
-            Apocalypse is for hackers across Canada and the world. If you need help paying
+            Hack Abu Dhabi is for hackers across UAE and the world. If you need help paying
             for travel costs, you've got options!
           </p>
           <p class="font-sans text-sm lg:text-base">
             <span class="font-bold underline">Travelling by car, bus, or train?</span> The
-            Hack Club Gas Fund can reimburse your costs. Learn more <a
-              href="https://gas.hackclub.com"
+            Hack Abu Dhabi Fund can reimburse your costs. Learn more <a
+              href="https://hackad.fillout.com/gas"
               class="underline"
               target="_blank">here</a
             >.
@@ -93,7 +93,7 @@ import FAQCard from "./FAQCard.astro";
               <span class="font-bold underline">Flying in?</span> We have a limited amount
               of grants available. Please indicate your interest on the registration form.
               Looking for the travel grant application? It's <a
-                href="https://join.apocalypse.hackclub.com/grants"
+                href="https://hackabudhabi.com/grants"
                 class="underline"
                 target="_blank">over here</a
               >!
@@ -103,7 +103,7 @@ import FAQCard from "./FAQCard.astro";
 
         <FAQCard question="Is this free?" cardId={1}>
           Yep. Attending costs a grand total of $0. Zilch. Nada. Nothing. From meals to
-          mini-events, Apocalypse is universally accessible.
+          mini-events, Hack Abu Dhabi is universally accessible.
         </FAQCard>
 
         <FAQCard question="I’m new to coding, can I join?" cardId={3}>
@@ -117,14 +117,14 @@ import FAQCard from "./FAQCard.astro";
         </FAQCard>
 
         <FAQCard question="Do I need a team?" cardId={4}>
-          Not required, but highly encouraged! You can meet teammates at Apocalypse, too
-          :) Teams are limited to 4 hackers.
+          Not required, but highly encouraged! You can meet teammates at Hack Abu Dhabi, too
+          :) Teams are limited to 10 hackers.
         </FAQCard>
 
         <FAQCard question="What should I bring?" cardId={5}>
           Please bring an official ID that includes a photo (read <a
             class="underline"
-            href="https://apocalypse.hackclub.com/id">the full policy</a
+            href="https://hackabudhabi.com/id">the full policy</a
           >), laptop ⚡ <span class="font-bold">with its charger</span> ⚡, sleeping bag,
           toiletries, water bottle, and imagination.
         </FAQCard>
@@ -132,22 +132,21 @@ import FAQCard from "./FAQCard.astro";
         <FAQCard question="My parents are worried—what should I do?" cardId={6}>
           Apocalypse will have 24/7 supervision by background-checked adults, with venue
           access limited to participants.<br /> Our parent's guide is available <a
-            href="https://docs.google.com/document/d/1NQDChsJd9dK4r1EWsVglzjHr0EnR3iW0DV3xMHSUAZ0/edit?usp=sharing"
+            href="https://hackabudhabi.com/parentsguide"
             target="_blank"
             class="underline">here</a
           >. Please reach out to <a
             class="underline"
-            href="mailto:apocalypse@hackclub.com"
-            target="_blank">apocalypse@hackclub.com</a
+            href="mailto:team@hackabudhabi.com"
+            target="_blank">team@hackabudhabi.com</a
           > with any concerns.
         </FAQCard>
 
         <FAQCard question="Who’s running this?" cardId={7}>
-          Apocalypse is organized by an eclectic group of teens who've worked on
-          hackathons across the world! We're part of Hack Club, an 8-year old nonprofit
+          Hack Abu Dhabi is organized by an eclectic group of teens who've worked on
+          hackathons across UAE! We're part of Hack Club AE, an 2-year old nonprofit
           organization whose mission is to foster a wholesome generation of coders,
-          makers, founders and builders. Watch a recap of Outernet, Hack Club's summer
-          2023 hackathon, <a
+          makers, founders and builders. Watch a recap of Outernet,to get an idea of what an hackathon is, <a
             class="underline"
             href="https://www.youtube.com/watch?v=O1s5HqSqKi0">here</a
           >.
