--- a/src/components/Info/Header.astro
+++ b/src/components/Info/Header.astro
@@ -23,10 +23,10 @@ const { videoWall = false } = Astro.props;
         class="flex items-center space-x-6 text-center font-sans text-xs xs:text-sm sm:text-xl lg:ml-auto lg:space-y-3 lg:text-right"
       >
         <div class={videoWall ? "text-2xl" : "w-full"}>
-          <p>May 17, 6 PM - May 19, 2 PM • Shopify Toronto</p>
+          <p>Nov 15, 7 AM - Nov 16, 7 PM • ADNEC Hall 5</p>
           <p>
-            Need urgent help? Call <a href="tel:+18556254225" class="hover:underline"
-              >+1 (855) 625-4225</a
+            Need urgent help? Call <a href="tel:971 50 8353449" class="hover:underline"
+              >971 50 8353449</a
             >
           </p>
           {
