--- a/src/components/Info/Links.astro
+++ b/src/components/Info/Links.astro
@@ -9,10 +9,10 @@ import LinkCard from "./LinkCard.astro";
       class="grid grid-rows-1 items-stretch gap-4 sm:grid-cols-2 sm:gap-6 lg:grid-cols-3 lg:gap-8"
     >
       <LinkCard name="Ship your project" link="/ship">
-        <p>All projects must be submitted before 9:00 am today</p>
+        <p>All projects must be submitted before 9:00 pm today</p>
       </LinkCard>
       <LinkCard name="How to get here" link="/travel">
-        <p>Read our guide on travelling to Apocalypse.</p>
+        <p>Read our guide on travelling to Hack Abu Dhabi.</p>
       </LinkCard>
       <LinkCard name="ID policy" link="/id">
         <p>Make sure you have an accepted form of physical photo ID at entry.</p>
@@ -21,10 +21,10 @@ import LinkCard from "./LinkCard.astro";
         <p>Check over this list to ensure you've brought everything you need!</p>
       </LinkCard>
       <LinkCard name="Parents' Guide" link="/parents">
-        <p>Learn more about how Apocalypse will be a safe experience for your child.</p>
+        <p>Learn more about how Hack Abu Dhabi will be a safe experience for your child.</p>
       </LinkCard>
       <LinkCard name="Teachers' Guide" link="/teachers">
-        <p>Learn more about how your students can benefit from attending Apocalypse!</p>
+        <p>Learn more about how your students can benefit from attending Hack Abu Dhabi!</p>
       </LinkCard>
       <LinkCard name="Showers" link="/showers">
         <p>
