--- a/src/components/Bento.astro
+++ b/src/components/Bento.astro
@@ -37,9 +37,8 @@
         <h2 class="text-4xl font-bold text-white">Build what you love</h2>
         <div class="space-y-3 font-sans">
           <p>
-            At Apocalypse, don’t worry about being realistic. Build the projects that’d
-            never make sense IRL, but would be perfect for tackling the zombies—from
-            post-apocalyptic food delivery to zombie-sized mousetraps.
+            At Hack Abu Dhabi, don’t worry about being realistic. Build the projects that’d
+            never make sense IRL, but would be perfect for tackling the Health Issues.
           </p>
           <p>
             Worried about how you’ll do it all? Fear not; you can always receive 1:1 help
@@ -56,7 +55,7 @@
         <h2 class="text-4xl font-bold text-white">Share your knowledge</h2>
         <div class="space-y-3 font-sans">
           <p>
-            Silly or serious, technical or not, Apocalypse is a space to share what you
+            Silly or serious, technical or not, Hack Abu Dhabi is a space to share what you
             know and learn from others.
           </p>
           <p>
@@ -85,11 +84,11 @@
         <h2 class="text-4xl font-bold text-white">Make new friends</h2>
         <div class="space-y-3 font-sans">
           <p>
-            Hackathons aren’t just time to code! At Apocalypse, you’ll meet fun teenagers
+            Hackathons aren’t just time to code! At Hack Abu Dhabi, you’ll meet fun teenagers
             who love making as much as you do.
           </p>
           <p>
-            From board games to karaoke nights, Apocalypse is one long social and a chance
+            From board games to karaoke nights, Hack Abu Dhabi is one long social and a chance
             to befriend people you adore.
           </p>
         </div>
@@ -103,9 +102,9 @@
         <h2 class="text-4xl font-bold text-white">Loads of surprises</h2>
         <div class="space-y-3 font-sans">
           <p>
-            Apocalypse is <span class="italic">experimental</span> at heart! Keep an eye
+            Hack Abu Dhabi is <span class="italic">experimental</span> at heart! Keep an eye
             on our <a
-              href="https://instagram.com/apohacks"
+              href="https://instagram.com/hackauh"
               class="underline"
               target="_blank">Instagram</a
             > for showcases of what we're cooking up. Unique swag, fun activities, and
@@ -121,7 +120,7 @@
           <!-- Fix alignment for this text -->
           <a
             class="flex-1 bg-transparent pt-0.5 text-2xl placeholder-white placeholder-opacity-75 hover:cursor-pointer focus:outline-none"
-            href="https://join.apocalypse.hackclub.com"
+            href="https://hackabudhabi.com/signup"
             target="_blank"
           >
             Register now!</a
