--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,55 +1,42 @@
 ---
 const organizers = [
   {
-    name: "Acon Lin",
-    img: "https://cloud-jy1p4tt69-hack-club-bot.vercel.app/60.png",
-    site: "https://aconlin.vercel.app/",
+    name: "Fayis Muhammed,
+    img: "https://hackabudhabi.com/team/_assets/media/69438a3816d002c0881972b71008cc4b.jpg",
+    site: "https://fayismuhammed.vercel.app/",
   },
   {
-    name: "Arav Narula",
-    img: "https://cloud-jy1p4tt69-hack-club-bot.vercel.app/71.png",
-    site: "https://www.radioblahaj.com/?ref=apocalypse",
+    name: "Fathima Farheen",
+    img: "https://hackabudhabi.com/team/_assets/media/0f9b72bc16c82285fc37ab1d9df2ef59.png",
+    site: "https://www.fathimafarheen.vercel.app",
   },
   {
-    name: "Mutammim Sarkar",
-    img: "https://cloud-jy1p4tt69-hack-club-bot.vercel.app/92.png",
-    site: "https://www.mutammim.com/",
+    name: "Naima Fathima",
+    img: "https://hackabudhabi.com/team/_assets/media/051f3588083227be8694ed9c01cb9655.jpg",
+    site: "https://www.naimafathima.vercel.app/",
   },
   {
-    name: "Shayaan Azeem",
-    img: "https://cloud-jy1p4tt69-hack-club-bot.vercel.app/83.png",
-    site: "https://www.shayaanazeem.co/",
+    name: "Abhinav Rajesh",
+    img: "https://hackabudhabi.com/team/_assets/media/96613b1d7f08eda5ee22cdc7d8cc8f0b.png",
+    site: "https://www.abhinavrajesh.vercel.app/",
   },
   {
-    name: "Ryan Di Lorenzo",
-    img: "https://cloud-jy1p4tt69-hack-club-bot.vercel.app/04.png",
-    site: "https://limeskey.com/",
+    name: "Fawzan Fazi",
+    img: "https://hackabudhabi.com/team/_assets/media/c1c73e612d5ce22820a5ea4d05bcf49a.png",
+    site: "https://fawzanfazi.vercel.app/",
   },
   {
-    name: "Gregory Gu",
-    img: "https://cloud-jy1p4tt69-hack-club-bot.vercel.app/15.png",
-    site: "https://www.linkedin.com/in/gregory-gu-b777212ba/ ",
+    name: "Akul Saju",
+    img: "https://hackabudhabi.com/team/_assets/media/794c9d32fafcbf0671aa981a6029a8d7.jpg",
+    site: "https://www.akulsaju.vercel.app/ ",
   },
   {
-    name: "Sam Liu",
-    img: "https://cloud-jy1p4tt69-hack-club-bot.vercel.app/26.png",
-    site: "https://samliu.dev/",
+    name: "Fathimatul Nazneen",
+    img: "https://hackabudhabi.com/team/_assets/media/d5d6c807daab1a9163fd9269132e273c.jpg",
+    site: "https://fathimatulnazneen.vercel.app/",
   },
-  {
-    name: "Sarvesh Mohan Kumar",
-    img: "https://cloud-jy1p4tt69-hack-club-bot.vercel.app/37.png",
-    site: "https://www.linkedin.com/in/sarvesh-mohan-kumar-a009ba268/",
-  },
-  {
-    name: "Evelyn Wong",
-    img: "https://cloud-8bqvtn5zz-hack-club-bot.vercel.app/08.png",
-    site: "https://www.evelynw.ong/",
-  },
-  {
-    name: "Vivian Yuan",
-    img: "https://cloud-jy1p4tt69-hack-club-bot.vercel.app/59.png",
-    site: "https://www.linkedin.com/in/vivian-yuan-240716284/", // TODO: Replace with personal site(?)
-  },
+  
+   
 ];
 ---
 
