--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,7 +21,7 @@ const organizers = [
     site: "https://www.abhinavrajesh.vercel.app/",
   },
   {
-    name: "Fawzan Fazi",
+    name: "Fawzan Fasi",
     img: "https://hackabudhabi.com/team/_assets/media/c1c73e612d5ce22820a5ea4d05bcf49a.png",
     site: "https://fawzanfazi.vercel.app/",
   },
