--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const organizers = [
   {
     name: "Fayis Muhammed,
     img: "https://hackabudhabi.com/team/_assets/media/69438a3816d002c0881972b71008cc4b.jpg",
-    site: "https://fayismuhammed.vercel.app/",
+    site: "https://fayismuhammed.vercel.app",
   },
   {
     name: "Fathima Farheen",
@@ -13,27 +13,27 @@ const organizers = [
   {
     name: "Naima Fathima",
     img: "https://hackabudhabi.com/team/_assets/media/051f3588083227be8694ed9c01cb9655.jpg",
-    site: "https://www.naimafathima.vercel.app/",
+    site: "https://www.hackabudhabi.com",
   },
   {
     name: "Abhinav Rajesh",
     img: "https://hackabudhabi.com/team/_assets/media/96613b1d7f08eda5ee22cdc7d8cc8f0b.png",
-    site: "https://www.abhinavrajesh.vercel.app/",
+    site: "https://www.hackabudhabi.com",
   },
   {
     name: "Fawzan Fasi",
     img: "https://hackabudhabi.com/team/_assets/media/c1c73e612d5ce22820a5ea4d05bcf49a.png",
-    site: "https://fawzanfazi.vercel.app/",
+    site: "https://www.hackabudhabi.com",
   },
   {
     name: "Akul Saju",
     img: "https://hackabudhabi.com/team/_assets/media/794c9d32fafcbf0671aa981a6029a8d7.jpg",
-    site: "https://www.akulsaju.vercel.app/ ",
+    site: "https://www.hackabudhabi.com",
   },
   {
     name: "Fathimatul Nazneen",
     img: "https://hackabudhabi.com/team/_assets/media/d5d6c807daab1a9163fd9269132e273c.jpg",
-    site: "https://fathimatulnazneen.vercel.app/",
+    site: "https://www.hackabudhabi.com",
   },
   
    
