--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,7 @@
 ---
 const organizers = [
   {
-    name: "Fayis Muhammed,
+    name: "Fayis Muhammed",
     img: "https://hackabudhabi.com/team/_assets/media/69438a3816d002c0881972b71008cc4b.jpg",
     site: "https://fayismuhammed.vercel.app",
   },
