--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ interface Props {
 
 const { title } = Astro.props;
 const description =
-  "Apocalypse is Toronto's biggest in-person high school hackathon. For 44 hours, build fun tech with 150 other high school programmers & engineers to survive the zombie apocalypse!";
+  "Hack Abu Dhabi is Worlds's biggest in-person high school hackathon. For 48 hours, build fun tech with 1000 other high school programmers & engineers together!";
 const banner = "/banner.png";
 
 const { url } = Astro.request;
@@ -24,18 +24,18 @@ if (slug == "/") slug = "";
     <meta name="description" content={description} />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content=`https://apocalypse.hackclub.com${slug}` />
+    <meta property="og:url" content=`https://Hackabudhabi.com${slug}` />
     <meta property="og:title" content={title} />
     <meta property="og:description" content={description} />
     <meta property="og:image" content={banner} />
 
     <meta
       name="twitter:description"
-      content="Apocalypse is Toronto's biggest in-person high school hackathon. For 44 hours, build fun tech with 150 other high school programmers & engineers to survive the zombie apocalypse!"
+      content="Hack Abu Dhabi is Worlds's biggest in-person high school hackathon. For 48 hours, build fun tech with 1000 other high school programmers & engineers in Hack Abu Dhabi!"
     />
 
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content=`https://apocalypse.hackclub.com/${slug}` />
+    <meta property="twitter:url" content=`https://hackabudhabi.com/${slug}` />
     <meta property="twitter:title" content={title} />
     <meta property="twitter:description" content={description} />
     <meta property="twitter:image" content={banner} />
