--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -70,21 +70,21 @@ const organizers = [
     </div>
     <p>
       Our <a
-        href="https://github.com/hackclub/apocalypse"
+        href="https://github.com/hackauh/website"
         target="_blank"
         class="underline decoration-purple-100/50 hover:decoration-purple-100">website</a
       > and <a
-        href="https://hcb.hackclub.com/apocalypse"
+        href="https://hcb.hackclub.com/hack-abu-dhabi"
         target="_blank"
         class="underline decoration-purple-100/50 hover:decoration-purple-100">finances</a
       > are open and transparent
     </p>
     <p>
       Inquiries? Contact us at <a
-        href="mailto:apocalypse@hackclub.com"
+        href="mailto:team@hackabudhabi.com"
         target="_blank"
         class="underline decoration-purple-100/50 hover:decoration-purple-100"
-        >apocalypse@hackclub.com</a
+        >team@hackabudhabi.com</a
       >
     </p>
   </div>
