--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Footer from "../components/Footer.astro";
 import NavBar from "../components/NavBar.astro";
 ---
 
-<Layout title="Apocalypse: Toronto's zombified high school hackathon!">
+<Layout title="Hack Abu Dhabi: World's largest high school hackathon!">
   <Hero client:load />
   <main>
     <NavBar />
