--- a/src/components/Letter.astro
+++ b/src/components/Letter.astro
@@ -55,9 +55,9 @@ const eventDate = new Date("2024-05-17T18:00:00-04:00");
         class="flex max-w-full grow flex-col gap-1 text-center text-2xl leading-6 text-white sm:gap-3 sm:text-3xl sm:leading-7 md:gap-2 md:text-4xl md:leading-9"
       >
         <p>
-          Join <span class="text-accent">150 hackers</span>
+          Join <span class="text-accent">1000 hackers</span>
            like you for
-          <span class="text-accent2">44 hours</span> of creativity, collaboration, and fun.
+          <span class="text-accent2">2 Days</span> of creativity, collaboration, and fun.
         </p>
         <p class="drop-shadow-[0_0_4px_#FF5DA9]">
           Build something, <span class="italic">anything</span>, to make the world a healthier, happier place.
